footer almost perfect

--- a/index.html
+++ b/index.html
@@ -15,28 +15,45 @@
         <nav>
             <ul>
                 <li><a href="/" class="active">Home</a></li>
-                <li><a href="#about" class="">About</a></li>
-                <li><a href="#skills" class="">Skills&Capabilities</a></li>
-                <li><a href="#contact" class="">Contact Me</a></li>
+                <li><a href="#about" >About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <!-- <li><a href="#Services">Services</a></li> !![[ i am still thinking if i rly whant to add this or not]]!!.-->
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="home">
-            <div class="home-card-container">
-                <h2>Hi There</h2>
-            </div>
-            <div class="my-img">
-                <!-- <svg height="100" width="100" xmlns="http://www.w3.org/2000/svg">
-                    <circle r="45" cx="50" cy="50" fill="#7469B6" /> -->
-                </svg>
-            </div>
-        </section>
+        <h2>My main</h2>
     </main>
+
     <footer>
-        <ul>
-            <li>this is the footer list 1</li>
+        <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
+        </div>
+        <ul class="socials">
+            <li>
+                <a href="https://github.com/ArwaYearub"><img src="./assets/github.png" alt="github account" width="20px"></i></a>
+            </li>
+            <!-- <li>
+                i don't know how to include my email in here
+                <a href="arwa.yaareb@gmail.com"><img src="./assets/mail.png" alt="Email Address" width="20px"></i></a>   
+            </li> -->
+            <li>
+                <a href="https://www.linkedin.com/in/arwa-yaareb-4ab720292/"><img src="./assets/linkedin.png" alt="linkedin account" width="20px"></i></a>
+            </li>
         </ul>
+        <ul class="footer-page-links">
+            <li>
+                <a href="/">Home</a>
+                <a href="#About">About</a>
+                <a href="#Skills">Skills</a>
+                <a href="#Contact">Contact Me</a>
+            </li>
+        </ul>
+        <p>Arwa Yaareb 2024</p>
     </footer>
     <script src="app.js"></script>
 </body>
